# single_ur_pick_and_place_ws

./: .gitignore  README.md  docker_compose_sim.yml
agx/: README.md  cable_interface.py  camera_interface.py  robot_interface.py  sim_develop.py  sim_ur.py  sim_ur_cable.py  utils.py
agx/robot_description/: robotiq.urdf  ur_left_no_gripper.urdf  ur_right_no_gripper.urdf  ur_robotiq_hande.urdf
agx/ur_description/: ur_no_gripper.urdf
src/robotiq_gripper/gripper_gui/: package.xml  setup.cfg  setup.py
src/robotiq_gripper/gripper_gui/gripper_gui/: gripper_gui_node.py
src/robotiq_gripper/robotiq_hande_description/: CHANGELOG.md
src/robotiq_gripper/robotiq_hande_description/urdf/: robotiq_hande_gripper.ros2_control.xacro
src/robotiq_gripper/robotiq_hande_driver/robotiq_hande_driver/bringup/config/: hande_controller.yaml
src/robotiq_gripper/robotiq_hande_driver/robotiq_hande_driver/bringup/launch/: gripper.launch.py  gripper_controller_preview.launch.py
src/robotiq_gripper/slow_fake_gripper_hardware/: CMakeLists.txt  package.xml  slow_fake_gripper_hardware.xml
src/robotiq_gripper/slow_fake_gripper_hardware/src/: slow_fake_system.cpp
src/ur_cell/ur_cell_control/: CMakeLists.txt  package.xml
src/ur_cell/ur_cell_control/config/: ros2_controllers.yaml
src/ur_cell/ur_cell_control/launch/: gripper_controller.launch.py  rsp.launch.py  start_gripper.launch.py  start_robot.launch.py
src/ur_cell/ur_cell_control/urdf/: my_robot_cell_controlled.urdf.xacro
src/ur_cell/ur_cell_description/: CMakeLists.txt  package.xml
src/ur_cell/ur_cell_description/meshes/: fzi_table.dae
src/ur_cell/ur_cell_description/urdf/: robotiq_hande_gripper.xacro  ur_cell.urdf.xacro  ur_cell_macro.xacro
src/ur_joint_states_mapping_cpp/: CMakeLists.txt  package.xml
src/ur_joint_states_mapping_cpp/src/: mapping.cpp
src/ur_rtde_gui/: package.xml  setup.cfg  setup.py
src/ur_rtde_gui/ur_rtde_gui/: test_moveJ.py
src/ur_rtde_interface/: package.xml  setup.cfg  setup.py
src/ur_rtde_interface/launch/: controller.launch.py  robot.launch.py
src/ur_rtde_interface/ur_rtde_interface/: gui_traj_control.py  robot_controller.py  robotiq.py  robotiq_socket.py  ur.py
src/ur_rtde_interface/ur_rtde_interface/test/: test_gripper.py  test_gripper_action.py  test_joint_states.py  test_moveJ.py  test_speedl.py  test_target.py  test_traj.py
src/ur_rtde_srv/: CMakeLists.txt  package.xml
src/ur_rtde_srv/srv/: MoveGripper.srv  MoveToJoint.srv  MoveToTarget.srv  MoveToTrajectory.srv  SetPinFrame.srv
